# AION2_Melan_DPS_Based_Meter

./: .gitignore  LICENSE  README.md  README_KO.md  README_ZH-TW.md  README_ZH.md  index.html  latest-v2.json  package-lock.json  package.json
.github/: FUNDING.yml
public/src/js/: battleTime.js  checkRelease.js  core.js  details.js  history.js  i18n.js  meter.js  skillIcons.js  tauriBridge.js
scripts/: sync-assets.cjs
src/: styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: captured_payload.rs  combat_port_detector.rs  file_replay.rs  mod.rs  packet_accumulator.rs  pcap_capturer.rs  stream_assembler.rs  stream_processor.rs
src-tauri/src/combat/: capture_dispatcher.rs  data_storage.rs  dps_calculator.rs  mod.rs  ping_tracker.rs
src-tauri/src/config/: settings.rs
src-tauri/src/entity/: analyzed_skill.rs  damage_packet.rs  details_context.rs  dps_data.rs  fight_record.rs  job_class.rs  mod.rs  personal_data.rs  special_damage.rs  summon_resolver.rs  target_info.rs
src-tauri/src/history/: fight_history.rs  mod.rs
src-tauri/src/i18n/: lookup.rs
src-tauri/src/logging/: logger.rs
src-tauri/src/platform/: admin.rs  hotkeys.rs  mod.rs  npcap.rs  screenshot.rs  window_detector.rs
src/data/: dot_skill_ids.json  skill_icons.json
src/data/i18n/npcs/: en.json  ko.json  zh-Hans.json  zh-Hant.json
src/data/i18n/skills/: en.json  ko.json  zh-Hans.json  zh-Hant.json
src/data/i18n/ui/: en.json  ko.json  zh-Hans.json  zh-Hant.json
